styled side nav bar

--- a/index.html
+++ b/index.html
@@ -6,20 +6,139 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project: Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav id="nav-bar">
-      <p>Dashboard</p>
-      <li>Home</li>
-      <li>Profile</li>
-      <li>Messages</li>
-      <li>History</li>
-      <li>Tasks</li>
-      <li>Communities</li>
+      <li id="dash">
+        <a href="#" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:view-dashboard"
+            style="color: white"
+            width="50"
+            height="50"
+          ></iconify-icon
+          ><span class="dashboard">Dashboard</span>
+        </a>
+      </li>
+      <br />
+      <li>
+        <a href="#" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:home"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <span>Home</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="#" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:account"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon
+          ><span>Profile</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="icon-con"
+          ><iconify-icon
+            inline
+            icon="mdi:forum"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <span> Messages </span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:clock-time-three-outline"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon
+          ><span> History </span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="icon-con"
+          ><iconify-icon
+            inline
+            icon="mdi:list-box-outline"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <span>Tasks</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:account-multiple-outline"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <span>Communities</span>
+        </a>
+      </li>
       <br /><br />
-      <li>Settings</li>
-      <li>Support</li>
-      <li>Privacy</li>
+      <li>
+        <a href="#" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:cog"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <span>Settings</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:headset"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <span>Support</span>
+        </a>
+      </li>
+      <li>
+        <a href="#" target="_blank" class="icon-con">
+          <iconify-icon
+            inline
+            icon="mdi:shield-alert-outline"
+            style="color: white"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <span>Privacy</span>
+        </a>
+      </li>
     </nav>
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   </body>
 </html>
