added css and js for side bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav id="nav-bar">
       <li id="dash">
-        <a href="#" class="icon-con">
+        <a href="#" class="icon-con toggle">
           <iconify-icon
             inline
             icon="mdi:view-dashboard"
@@ -139,6 +139,8 @@
         </a>
       </li>
     </nav>
+
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
