setting up for header contents

--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
         </a>
       </li>
     </nav>
+    <header></header>
+    <main></main>
   </body>
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   <script src="script.js"></script>
