began styling header

--- a/index.html
+++ b/index.html
@@ -139,7 +139,35 @@
         </a>
       </li>
     </nav>
-    <header></header>
+    <header>
+      <div class="parent-header">
+        <div class="div1h"></div>
+        <div class="div2h">
+          <iconify-icon
+            icon="mdi:bell-badge-outline"
+            style="color: #073b4c"
+            width="30"
+            height="30"
+          ></iconify-icon>
+        </div>
+        <div class="div3h">TSV-STACKS</div>
+        <div class="div4h">
+          Hi there, <span class="user-name">Tarndeep </span>
+        </div>
+        <div class="div5h">
+          <iconify-icon
+            icon="mdi:magnify"
+            style="color: #073b4c"
+            width="30"
+            height="30"
+          ></iconify-icon>
+          <input type="text" placeholder="Search.." />
+        </div>
+        <div class="div6h center"><a href="#" class="myButton">New</a></div>
+        <div class="div7h center"><a href="#" class="myButton">Upload</a></div>
+        <div class="div8h center"><a href="#" class="myButton">Share</a></div>
+      </div>
+    </header>
     <main></main>
   </body>
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
