--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
         </div>
         <div class="div3h">TSV-STACKS</div>
         <div class="div4h">
-          Hi there, <span class="user-name">Tarndeep </span>
+          <span class="greeting">Hi there, </span
+          ><span class="user-name">Tarndeep </span>
         </div>
         <div class="div5h">
           <iconify-icon
