added projects section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
     </nav>
     <header>
       <div class="parent-header">
-        <div class="div1h"></div>
+        <div class="div1h">
+          <img src="./man.png" alt="profile picture icon" />
+        </div>
         <div class="div2h">
           <iconify-icon
             icon="mdi:bell-badge-outline"
@@ -153,7 +155,7 @@
         <div class="div3h">TSV-STACKS</div>
         <div class="div4h">
           <span class="greeting">Hi there, </span
-          ><span class="user-name">Tarndeep </span>
+          ><span class="user-name">Tarndeep (@tsv-stacks)</span>
         </div>
         <div class="div5h">
           <iconify-icon
@@ -162,14 +164,66 @@
             width="30"
             height="30"
           ></iconify-icon>
-          <input type="text" placeholder="Search.." />
+          <input type="text" />
         </div>
         <div class="div6h center"><a href="#" class="myButton">New</a></div>
         <div class="div7h center"><a href="#" class="myButton">Upload</a></div>
         <div class="div8h center"><a href="#" class="myButton">Share</a></div>
       </div>
     </header>
-    <main></main>
+    <main class="scroll">
+      <h3>Projects</h3>
+      <div class="parent-projects">
+        <div class="div1p">
+          <p>Javascript Calculator</p>
+          <a
+            href="https://tsv-stacks.github.io/Project-Calculator/"
+            target="_blank"
+            ><img src="./calc.JPG"
+          /></a>
+          <a
+            href="https://github.com/tsv-stacks/Project-Calculator"
+            target="_blank"
+            >GitHub Repo Link</a
+          >
+        </div>
+        <div class="div2p">
+          <p>Etch-A-Sketch</p>
+          <a href="https://tsv-stacks.github.io/Etch-A-Sketch/" target="_blank"
+            ><img src="./etch.JPG"
+          /></a>
+        </div>
+        <div class="div3p">
+          <p>Rock, Paper, Scissors</p>
+          <a
+            href="https://tsv-stacks.github.io/Rock-Paper-Scissors/"
+            target="_blank"
+            ><img src="./rpc.JPG"
+          /></a>
+        </div>
+        <div class="div4p">
+          <p>Roman Numerals</p>
+
+          <a
+            href="https://tsv-stacks.github.io/Roman-Numeral-Converter/"
+            target="_blank"
+            ><img src="/RNConv.JPG" />
+          </a>
+        </div>
+        <div class="div5p">
+          <p>Counter App</p>
+          <a href="https://tsv-stacks.github.io/Counter-App/" target="_blank"
+            ><img src="counter.JPG" />
+          </a>
+        </div>
+        <div class="div6p">
+          <p>Sign-Up Page</p>
+          <a href="" target="_blank">
+            <img src="./sup.JPG" />
+          </a>
+        </div>
+      </div>
+    </main>
   </body>
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   <script src="script.js"></script>
