fixed scroll issue. Need to remove grid row on small screens

--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
           <a href="https://tsv-stacks.github.io/Etch-A-Sketch/" target="_blank"
             ><img src="./etch.JPG"
           /></a>
+          <a href="https://github.com/tsv-stacks/Etch-A-Sketch" target="_blank"
+            >GitHub Repo Link</a
+          >
         </div>
         <div class="div3p">
           <p>Rock, Paper, Scissors</p>
@@ -200,27 +203,44 @@
             target="_blank"
             ><img src="./rpc.JPG"
           /></a>
+          <a
+            href="https://github.com/tsv-stacks/Rock-Paper-Scissors"
+            target="_blank"
+            >GitHub Repo Link</a
+          >
         </div>
         <div class="div4p">
           <p>Roman Numerals</p>
-
           <a
             href="https://tsv-stacks.github.io/Roman-Numeral-Converter/"
             target="_blank"
-            ><img src="/RNConv.JPG" />
+            ><img src="./RNConv.JPG" />
           </a>
+          <a
+            href="https://github.com/tsv-stacks/Roman-Numeral-Converter"
+            target="_blank"
+            >GitHub Repo Link</a
+          >
         </div>
         <div class="div5p">
           <p>Counter App</p>
           <a href="https://tsv-stacks.github.io/Counter-App/" target="_blank"
             ><img src="counter.JPG" />
           </a>
+          <a href="https://github.com/tsv-stacks/Counter-App" target="_blank"
+            >GitHub Repo Link</a
+          >
         </div>
         <div class="div6p">
           <p>Sign-Up Page</p>
           <a href="" target="_blank">
             <img src="./sup.JPG" />
           </a>
+          <a
+            href="https://github.com/tsv-stacks/Project-Sign-Up-Form"
+            target="_blank"
+            >GitHub Repo Link</a
+          >
         </div>
       </div>
     </main>
