finished projects and started footer section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <nav id="nav-bar">
@@ -29,7 +33,7 @@
       </li>
       <br />
       <li>
-        <a href="#" class="icon-con">
+        <a href="#header" class="icon-con">
           <iconify-icon
             inline
             icon="mdi:home"
@@ -172,7 +176,12 @@
       </div>
     </header>
     <main class="scroll">
-      <h3>Projects</h3>
+      <h3>PROJECTS</h3>
+      <p>
+        This is a small collection of some of my favourite projects I built
+        early on to help me learn how to code as well as experiment with
+        different features and functions.
+      </p>
       <div class="parent-projects">
         <div class="div1p">
           <p>Javascript Calculator</p>
@@ -181,6 +190,11 @@
             target="_blank"
             ><img src="./calc.JPG"
           /></a>
+          <p class="italic">
+            Built using vanilla JS, HTML & CSS. This project pushed my knowledge
+            of arrays and how to manipulate the DOM to the limit. I added a
+            memory & memory clear function which I am very proud of.
+          </p>
           <a
             href="https://github.com/tsv-stacks/Project-Calculator"
             target="_blank"
@@ -192,6 +206,12 @@
           <a href="https://tsv-stacks.github.io/Etch-A-Sketch/" target="_blank"
             ><img src="./etch.JPG"
           /></a>
+          <p class="italic">
+            This was my first "big" Javascript project and it really pushed me
+            into learning new ways of thinking and adapting to obstacles I had
+            never faced before. A project I one day hope to revisit and improve
+            even further.
+          </p>
           <a href="https://github.com/tsv-stacks/Etch-A-Sketch" target="_blank"
             >GitHub Repo Link</a
           >
@@ -203,6 +223,11 @@
             target="_blank"
             ><img src="./rpc.JPG"
           /></a>
+          <p class="italic">
+            This might possible be the most fun project I've worked on to date.
+            Particularly fond of this project as it taught me so much JS and it
+            was written and designed completely by myself.
+          </p>
           <a
             href="https://github.com/tsv-stacks/Rock-Paper-Scissors"
             target="_blank"
@@ -216,6 +241,11 @@
             target="_blank"
             ><img src="./RNConv.JPG" />
           </a>
+          <p class="italic">
+            This project taught me a lot about manipulating arrays and
+            recursion. It was meant to be a JS only challeng but I had so much
+            fun with it I turned it into a webpage.
+          </p>
           <a
             href="https://github.com/tsv-stacks/Roman-Numeral-Converter"
             target="_blank"
@@ -227,6 +257,11 @@
           <a href="https://tsv-stacks.github.io/Counter-App/" target="_blank"
             ><img src="counter.JPG" />
           </a>
+          <p class="italic">
+            My very first JS, HTML & CSS project I made. I was coding along with
+            a youtube video and made a few changes and adjustments to make it my
+            own.
+          </p>
           <a href="https://github.com/tsv-stacks/Counter-App" target="_blank"
             >GitHub Repo Link</a
           >
@@ -236,11 +271,62 @@
           <a href="" target="_blank">
             <img src="./sup.JPG" />
           </a>
+          <p class="italic">
+            My first attempt at making a responsive webpage. I added a little JS
+            code to check that the password satisfied certain conditions and
+            show an error message if it did not.
+          </p>
           <a
             href="https://github.com/tsv-stacks/Project-Sign-Up-Form"
             target="_blank"
             >GitHub Repo Link</a
           >
+        </div>
+      </div>
+      <div class="parent-links">
+        <div class="div1l"></div>
+        <div class="div2l">
+          <div>
+            <p>CONTACT ME</p>
+          </div>
+          <div class="fa-icons">
+            <div>
+              <iconify-icon
+                inline
+                icon="mdi:linkedin"
+                style="color: #073b4c"
+                width="30"
+                height="30"
+              ></iconify-icon>
+              <a
+                href="https://www.linkedin.com/in/tarndeep-virdi/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </div>
+            <div>
+              <iconify-icon
+                inline
+                icon="mdi:github"
+                style="color: #073b4c"
+                width="30"
+                height="30"
+              ></iconify-icon>
+              <a href="https://github.com/tsv-stacks" target="_blank">GitHub</a>
+            </div>
+            <div>
+              <iconify-icon
+                inline
+                icon="mdi:twitter"
+                style="color: #073b4c"
+                width="30"
+                height="30"
+              ></iconify-icon>
+              <a href="https://twitter.com/tsv_stacks" target="_blank">
+                Twitter</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </main>
