--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <div class="div1l"></div>
         <div class="div2l">
           <div>
-            <p>CONTACT ME</p>
+            <h3>CONTACT ME</h3>
           </div>
           <div class="fa-icons">
             <div>
