finished styling for mobile

--- a/index.html
+++ b/index.html
@@ -268,7 +268,10 @@
         </div>
         <div class="div6p">
           <p>Sign-Up Page</p>
-          <a href="" target="_blank">
+          <a
+            href="https://tsv-stacks.github.io/Project-Sign-Up-Form/"
+            target="_blank"
+          >
             <img src="./sup.JPG" />
           </a>
           <p class="italic">
@@ -284,48 +287,75 @@
         </div>
       </div>
       <div class="parent-links">
-        <div class="div1l"></div>
+        <div class="div1l">
+          <h3>Learn to Code!</h3>
+          <div class="section-footer">
+            <p class="bold">FreeCodeCamp</p>
+            <p>
+              Non profit that has created thousands of videos, articles, and
+              interactive coding lessons
+            </p>
+          </div>
+          <div class="section-footer">
+            <p class="bold">The Odin Project</p>
+            <p>Free online, open source coding curriculum</p>
+          </div>
+          <div class="section-footer">
+            <p class="bold">Manchester Codes</p>
+            <p>Part-Time 28 week coding bootcamp</p>
+          </div>
+        </div>
         <div class="div2l">
           <div>
-            <h3>CONTACT ME</h3>
+            <h3>CONTACT ME:</h3>
           </div>
-          <div class="fa-icons">
-            <div>
-              <iconify-icon
-                inline
-                icon="mdi:linkedin"
-                style="color: #073b4c"
-                width="30"
-                height="30"
-              ></iconify-icon>
-              <a
-                href="https://www.linkedin.com/in/tarndeep-virdi/"
-                target="_blank"
-                >LinkedIn</a
-              >
-            </div>
-            <div>
-              <iconify-icon
-                inline
-                icon="mdi:github"
-                style="color: #073b4c"
-                width="30"
-                height="30"
-              ></iconify-icon>
-              <a href="https://github.com/tsv-stacks" target="_blank">GitHub</a>
-            </div>
-            <div>
-              <iconify-icon
-                inline
-                icon="mdi:twitter"
-                style="color: #073b4c"
-                width="30"
-                height="30"
-              ></iconify-icon>
-              <a href="https://twitter.com/tsv_stacks" target="_blank">
-                Twitter</a
-              >
-            </div>
+          <div>
+            <iconify-icon
+              inline
+              icon="mdi:linkedin"
+              style="color: #073b4c"
+              width="30"
+              height="30"
+            ></iconify-icon>
+            <a
+              href="https://www.linkedin.com/in/tarndeep-virdi/"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </div>
+          <div>
+            <iconify-icon
+              inline
+              icon="mdi:github"
+              style="color: #073b4c"
+              width="30"
+              height="30"
+            ></iconify-icon>
+            <a href="https://github.com/tsv-stacks" target="_blank">GitHub</a>
+          </div>
+          <div>
+            <iconify-icon
+              inline
+              icon="mdi:twitter"
+              style="color: #073b4c"
+              width="30"
+              height="30"
+            ></iconify-icon>
+            <a href="https://twitter.com/tsv_stacks" target="_blank">
+              Twitter</a
+            >
+          </div>
+          <div>
+            <iconify-icon
+              inline
+              icon="mdi:steam"
+              style="color: #073b4c"
+              width="30"
+              height="30"
+            ></iconify-icon>
+            <a href="https://steamcommunity.com/id/tarndeep" target="_blank"
+              >Steam</a
+            >
           </div>
         </div>
       </div>
