--- a/index.html
+++ b/index.html
@@ -177,24 +177,32 @@
     </header>
     <main class="scroll">
       <h3>PROJECTS</h3>
-      <p>
+      <p class="intro">
         This is a small collection of some of my favourite projects I built
         early on to help me learn how to code as well as experiment with
         different features and functions.
       </p>
       <div class="parent-projects">
         <div class="div1p">
-          <p>Javascript Calculator</p>
-          <a
-            href="https://tsv-stacks.github.io/Project-Calculator/"
-            target="_blank"
-            ><img src="./calc.JPG"
-          /></a>
-          <p class="italic">
-            Built using vanilla JS, HTML & CSS. This project pushed my knowledge
-            of arrays and how to manipulate the DOM to the limit. I added a
-            memory & memory clear function which I am very proud of.
-          </p>
+          <p class="bold projects-title">Javascript Calculator</p>
+          <div class="flex-side">
+            <div>
+              <a
+                href="https://tsv-stacks.github.io/Project-Calculator/"
+                target="_blank"
+                ><img src="./calc.JPG"
+              /></a>
+            </div>
+            <div>
+              <p class="italic">
+                Built using vanilla JS, HTML & CSS. This project pushed my
+                knowledge of arrays and how to manipulate the DOM to the limit.
+                I added a memory & memory clear function which I am very proud
+                of.
+              </p>
+            </div>
+          </div>
+
           <a
             href="https://github.com/tsv-stacks/Project-Calculator"
             target="_blank"
@@ -202,32 +210,46 @@
           >
         </div>
         <div class="div2p">
-          <p>Etch-A-Sketch</p>
-          <a href="https://tsv-stacks.github.io/Etch-A-Sketch/" target="_blank"
-            ><img src="./etch.JPG"
-          /></a>
-          <p class="italic">
-            This was my first "big" Javascript project and it really pushed me
-            into learning new ways of thinking and adapting to obstacles I had
-            never faced before. A project I one day hope to revisit and improve
-            even further.
-          </p>
+          <p class="bold projects-title">Etch-A-Sketch</p>
+          <div class="flex-side">
+            <div>
+              <a
+                href="https://tsv-stacks.github.io/Etch-A-Sketch/"
+                target="_blank"
+                ><img src="./etch.JPG"
+              /></a>
+            </div>
+            <div>
+              <p class="italic">
+                My first "big" Javascript project. It really pushed me into
+                learning new ways of thinking and adapting to obstacles I had
+                never faced before. A project I one day hope to revisit and
+                improve even further.
+              </p>
+            </div>
+          </div>
           <a href="https://github.com/tsv-stacks/Etch-A-Sketch" target="_blank"
             >GitHub Repo Link</a
           >
         </div>
         <div class="div3p">
-          <p>Rock, Paper, Scissors</p>
-          <a
-            href="https://tsv-stacks.github.io/Rock-Paper-Scissors/"
-            target="_blank"
-            ><img src="./rpc.JPG"
-          /></a>
-          <p class="italic">
-            This might possible be the most fun project I've worked on to date.
-            Particularly fond of this project as it taught me so much JS and it
-            was written and designed completely by myself.
-          </p>
+          <p class="bold projects-title">Rock, Paper, Scissors</p>
+          <div class="flex-side">
+            <div>
+              <a
+                href="https://tsv-stacks.github.io/Rock-Paper-Scissors/"
+                target="_blank"
+                ><img src="./rpc.JPG"
+              /></a>
+            </div>
+            <div>
+              <p class="italic">
+                This might possibly be the most fun project I've worked on to
+                date. Particularly fond of this project as it taught me so much
+                about JS and it was written and designed completely by myself.
+              </p>
+            </div>
+          </div>
           <a
             href="https://github.com/tsv-stacks/Rock-Paper-Scissors"
             target="_blank"
@@ -235,17 +257,23 @@
           >
         </div>
         <div class="div4p">
-          <p>Roman Numerals</p>
-          <a
-            href="https://tsv-stacks.github.io/Roman-Numeral-Converter/"
-            target="_blank"
-            ><img src="./RNConv.JPG" />
-          </a>
-          <p class="italic">
-            This project taught me a lot about manipulating arrays and
-            recursion. It was meant to be a JS only challeng but I had so much
-            fun with it I turned it into a webpage.
-          </p>
+          <p class="bold projects-title">Roman Numerals</p>
+          <div class="flex-side">
+            <div>
+              <a
+                href="https://tsv-stacks.github.io/Roman-Numeral-Converter/"
+                target="_blank"
+                ><img src="./RNConv.JPG" />
+              </a>
+            </div>
+            <div>
+              <p class="italic">
+                This project taught me a lot about manipulating arrays and
+                recursion. It was meant to be a JS only challeng but I had so
+                much fun with it I turned it into a webpage.
+              </p>
+            </div>
+          </div>
           <a
             href="https://github.com/tsv-stacks/Roman-Numeral-Converter"
             target="_blank"
@@ -253,32 +281,46 @@
           >
         </div>
         <div class="div5p">
-          <p>Counter App</p>
-          <a href="https://tsv-stacks.github.io/Counter-App/" target="_blank"
-            ><img src="counter.JPG" />
-          </a>
-          <p class="italic">
-            My very first JS, HTML & CSS project I made. I was coding along with
-            a youtube video and made a few changes and adjustments to make it my
-            own.
-          </p>
+          <p class="bold projects-title">Counter App</p>
+          <div class="flex-side">
+            <div>
+              <a
+                href="https://tsv-stacks.github.io/Counter-App/"
+                target="_blank"
+                ><img src="counter.JPG" />
+              </a>
+            </div>
+            <div>
+              <p class="italic">
+                My very first JS, HTML & CSS project I made. I was coding along
+                with a youtube video and made a few changes and adjustments to
+                make it my own.
+              </p>
+            </div>
+          </div>
           <a href="https://github.com/tsv-stacks/Counter-App" target="_blank"
             >GitHub Repo Link</a
           >
         </div>
         <div class="div6p">
-          <p>Sign-Up Page</p>
-          <a
-            href="https://tsv-stacks.github.io/Project-Sign-Up-Form/"
-            target="_blank"
-          >
-            <img src="./sup.JPG" />
-          </a>
-          <p class="italic">
-            My first attempt at making a responsive webpage. I added a little JS
-            code to check that the password satisfied certain conditions and
-            show an error message if it did not.
-          </p>
+          <p class="bold projects-title">Sign-Up Page</p>
+          <div class="flex-side">
+            <div>
+              <a
+                href="https://tsv-stacks.github.io/Project-Sign-Up-Form/"
+                target="_blank"
+              >
+                <img src="./sup.JPG" />
+              </a>
+            </div>
+            <div>
+              <p class="italic">
+                My first attempt at making a responsive webpage. I added a
+                little JS code to check that the password satisfied certain
+                conditions and show an error message if it did not.
+              </p>
+            </div>
+          </div>
           <a
             href="https://github.com/tsv-stacks/Project-Sign-Up-Form"
             target="_blank"
