added responsive to links section

--- a/index.html
+++ b/index.html
@@ -351,53 +351,55 @@
           <div>
             <h3>CONTACT ME:</h3>
           </div>
-          <div>
-            <iconify-icon
-              inline
-              icon="mdi:linkedin"
-              style="color: #073b4c"
-              width="30"
-              height="30"
-            ></iconify-icon>
-            <a
-              href="https://www.linkedin.com/in/tarndeep-virdi/"
-              target="_blank"
-              >LinkedIn</a
-            >
-          </div>
-          <div>
-            <iconify-icon
-              inline
-              icon="mdi:github"
-              style="color: #073b4c"
-              width="30"
-              height="30"
-            ></iconify-icon>
-            <a href="https://github.com/tsv-stacks" target="_blank">GitHub</a>
-          </div>
-          <div>
-            <iconify-icon
-              inline
-              icon="mdi:twitter"
-              style="color: #073b4c"
-              width="30"
-              height="30"
-            ></iconify-icon>
-            <a href="https://twitter.com/tsv_stacks" target="_blank">
-              Twitter</a
-            >
-          </div>
-          <div>
-            <iconify-icon
-              inline
-              icon="mdi:steam"
-              style="color: #073b4c"
-              width="30"
-              height="30"
-            ></iconify-icon>
-            <a href="https://steamcommunity.com/id/tarndeep" target="_blank"
-              >Steam</a
-            >
+          <div class="contact-me">
+            <div>
+              <iconify-icon
+                inline
+                icon="mdi:linkedin"
+                style="color: #073b4c"
+                width="30"
+                height="30"
+              ></iconify-icon>
+              <a
+                href="https://www.linkedin.com/in/tarndeep-virdi/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </div>
+            <div>
+              <iconify-icon
+                inline
+                icon="mdi:github"
+                style="color: #073b4c"
+                width="30"
+                height="30"
+              ></iconify-icon>
+              <a href="https://github.com/tsv-stacks" target="_blank">GitHub</a>
+            </div>
+            <div>
+              <iconify-icon
+                inline
+                icon="mdi:twitter"
+                style="color: #073b4c"
+                width="30"
+                height="30"
+              ></iconify-icon>
+              <a href="https://twitter.com/tsv_stacks" target="_blank">
+                Twitter</a
+              >
+            </div>
+            <div>
+              <iconify-icon
+                inline
+                icon="mdi:steam"
+                style="color: #073b4c"
+                width="30"
+                height="30"
+              ></iconify-icon>
+              <a href="https://steamcommunity.com/id/tarndeep" target="_blank"
+                >Steam</a
+              >
+            </div>
           </div>
         </div>
       </div>
