styling and responsiveness to links grid

--- a/index.html
+++ b/index.html
@@ -331,20 +331,28 @@
       <div class="parent-links">
         <div class="div1l">
           <h3>Learn to Code!</h3>
-          <div class="section-footer">
-            <p class="bold">FreeCodeCamp</p>
-            <p>
-              Non profit that has created thousands of videos, articles, and
-              interactive coding lessons
-            </p>
-          </div>
-          <div class="section-footer">
-            <p class="bold">The Odin Project</p>
-            <p>Free online, open source coding curriculum</p>
-          </div>
-          <div class="section-footer">
-            <p class="bold">Manchester Codes</p>
-            <p>Part-Time 28 week coding bootcamp</p>
+          <div>
+            <div class="section-footer">
+              <p class="bold">Free Code Camp</p>
+              <p>
+                Non profit that has created thousands of videos, articles, and
+                interactive coding lessons
+              </p>
+            </div>
+            <div class="section-footer">
+              <p class="bold">The Odin Project</p>
+              <p>
+                Free online, open source coding curriculum. Maintained and
+                improved by a team of volunteers
+              </p>
+            </div>
+            <div class="section-footer">
+              <p class="bold">Manchester Codes</p>
+              <p>
+                Software Engineer FastTrack course at Manchester Codes - a six
+                month part time immersive course
+              </p>
+            </div>
           </div>
         </div>
         <div class="div2l">
