--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div>
               <p class="italic">
                 This project taught me a lot about manipulating arrays and
-                recursion. It was meant to be a JS only challeng but I had so
+                recursion. It was meant to be a JS only challenge but I had so
                 much fun with it I turned it into a webpage.
               </p>
             </div>
